adding new deckos

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,15 @@
-version: "3"
+version: "2"
 services:
   app:
     container_name: app
-    restart: always
+    restart: on-failure
     networks:
       - questdb
     build:
       context: .
+    depends_on:
+      - "questdb"
+    command: ["./wait-for-it.sh"]
   questdb:
     container_name: questdb
     image: questdb/questdb
